// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render renders correctly, error false 1`] = `
<StyledMainComponent>
  <ErrorBoundary>
    <Header />
    <Connect(BackdropComponent)>
      <Connect(SearchInputContainer) />
      <Connect(PosterComponent) />
      <Connect(DescriptionComponent) />
    </Connect(BackdropComponent)>
  </ErrorBoundary>
</StyledMainComponent>
`;

exports[`render renders correctly, error true 1`] = `
<StyledMainComponent>
  <ErrorBoundary>
    <Header />
    <h1
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      Something went wrong.
    </h1>
  </ErrorBoundary>
</StyledMainComponent>
`;
